name:                chronos
version:             0.1.0.0
synopsis:            Simple FRP timeline
description:         
license:             BSD3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
copyright:           Dimitri Sabadie
category:            FRP

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -W -Wall -O2

  exposed-modules:     FRP.Chronos

  build-depends:       base >= 4.6 && < 4.8

  default-language:    Haskell2010
